--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <script src="lightgl.js"></script>
+  <script src="three.min.js"></script>
   <script src="csg.js"></script>
+  <script src="trackballcontrols.js"></script>
+  <script src="threecsg.js"></script>
   <script src="openjscad.js"></script>
   <style>
 
