--- a/ringdemo.html
+++ b/ringdemo.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <html><head>
-  <script src="lightgl.js"></script>
-  <script src="csg.js"></script>
-  <script src="openjscad.js"></script>
+    <script src="Detector.js"></script>
+    <script src="three.min.js"></script>
+    <script src="csg.js"></script>
+    <script src="openjscad.js"></script>
+    <script src="TrackballControls.js"></script>
+    <script src="ThreeCSG.js"></script>
   <style>
 
 body {
