--- a/ringdemo.html
+++ b/ringdemo.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 
 <html><head>
-    <script src="Detector.js"></script>
     <script src="three.min.js"></script>
     <script src="csg.js"></script>
     <script src="openjscad.js"></script>
-    <script src="TrackballControls.js"></script>
-    <script src="ThreeCSG.js"></script>
+    <script src="trackballcontrols.js"></script>
+    <script src="threecsg.js"></script>
   <style>
 
 body {
