--- a/threejsdemo.html
+++ b/threejsdemo.html
@@ -4,12 +4,11 @@
 
     <meta charset="UTF-8">
     <title>OpenCadJS based on Three.js</title>
-    <script src="Detector.js"></script>
     <script src="three.min.js"></script>
     <script src="csg.js"></script>
     <script src="openjscad.js"></script>
-    <script src="TrackballControls.js"></script>
-    <script src="ThreeCSG.js"></script>
+    <script src="trackballcontrols.js"></script>
+    <script src="threecsg.js"></script>
 
     <script>
         //TODO here all the code goes
@@ -30,7 +29,6 @@
 
         }
     </script>
-    <link rel="stylesheet" href="OpenjsCADWithThreeJS.css" type="text/css">
     <style>
 
         body {
