--- a/processfile.html
+++ b/processfile.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
 <html><head>
-  <script src="lightgl.js"></script>
-  <script src="csg.js"></script>
-  <script src="openjscad.js"></script>
+  <script src="src/three.min.js"></script>
+  <script src="src/csg.js"></script>
+  <script src="src/openjscad.js"></script>
+  <script src="src/trackballcontrols.js"></script>
+  <script src="src/threecsg.js"></script>
+
 <style>
 
 body {
   font: 14px/20px 'Helvetica Neue Light', HelveticaNeue-Light, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   max-width: 820px;
+  margin-left: 18.7%;
 }
 
 pre, code, textarea {
@@ -25,6 +29,10 @@ pre, textarea {
 }
 textarea:focus {
   outline: none;
+}
+
+h1 {
+  text-align: center;
 }
 
 a { color: inherit; }
