created structure, commited for the reference point

--- a/examples/lampshadedemo.html
+++ b/examples/lampshadedemo.html
@@ -2,8 +2,8 @@
 
 <html><head>
   <script src="lightgl.js"></script>
-  <script src="csg.js"></script>
-  <script src="openjscad.js"></script>
+  <script src="../src/csg.js"></script>
+  <script src="../src/openjscad.js"></script>
   <style>
 
 body {
@@ -35,7 +35,7 @@ textarea:focus {
 canvas { cursor: move; }
 
   </style>
-<link rel="stylesheet" href="openjscad.css" type="text/css">
+<link rel="stylesheet" href="css/openjscad.css" type="text/css">
 
 <script>
 
@@ -63,7 +63,7 @@ function updateSolid()
   <h2>Source code</h2>
 Below is the OpenJsCad script for this demo. To build your own models, create a .jscad script
 and use the <a href="processfile.html"><b>OpenJsCad parser</b></a>. For more information see the
-<a href="index.html">OpenJsCad documentation</a>. 
+<a href="index.html">OpenJsCad documentation</a>.
 <br><br> 
 <textarea id="code" style="height: 500px">
 function main(params)
