--- a/examples/index.html
+++ b/examples/index.html
@@ -2,11 +2,11 @@
 
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <script src="three.min.js"></script>
-  <script src="csg.js"></script>
-  <script src="trackballcontrols.js"></script>
-  <script src="threecsg.js"></script>
-  <script src="openjscad.js"></script>
+  <script src="../src/three.min.js"></script>
+  <script src="../src/csg.js"></script>
+  <script src="../src/trackballcontrols.js"></script>
+  <script src="../src/threecsg.js"></script>
+  <script src="../src/openjscad.js"></script>
   <style>
 
 body {
@@ -38,7 +38,7 @@ textarea:focus {
 canvas { cursor: move; }
 
   </style>
-<link rel="stylesheet" href="openjscad.css" type="text/css">
+<link rel="stylesheet" href="css/openjscad.css" type="text/css">
 
 <script>
 
