--- a/examples/processfile.html
+++ b/examples/processfile.html
@@ -2,8 +2,8 @@
 
 <html><head>
   <script src="lightgl.js"></script>
-  <script src="csg.js"></script>
-  <script src="openjscad.js"></script>
+  <script src="../src/csg.js"></script>
+  <script src="../src/openjscad.js"></script>
 <style>
 
 body {
@@ -30,7 +30,7 @@ textarea:focus {
 a { color: inherit; }
 </style>
 
-<link rel="stylesheet" href="openjscad.css" type="text/css">
+<link rel="stylesheet" href="css/openjscad.css" type="text/css">
 
 <script>
 
