--- a/examples/ringdemo.html
+++ b/examples/ringdemo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html><head>
-    <script src="three.min.js"></script>
-    <script src="csg.js"></script>
-    <script src="openjscad.js"></script>
-    <script src="trackballcontrols.js"></script>
-    <script src="threecsg.js"></script>
+    <script src="../src/three.min.js"></script>
+    <script src="../src/csg.js"></script>
+    <script src="../src/openjscad.js"></script>
+    <script src="../src/trackballcontrols.js"></script>
+    <script src="../src/threecsg.js"></script>
   <style>
 
 body {
@@ -37,7 +37,7 @@ textarea:focus {
 canvas { cursor: move; }
 
   </style>
-<link rel="stylesheet" href="openjscad.css" type="text/css">
+<link rel="stylesheet" href="css/openjscad.css" type="text/css">
 
 <script>
 
@@ -68,7 +68,7 @@ function updateSolid()
   <h2>Source code</h2>
 Below is the OpenJsCad script for this demo. To build your own models, create a .jscad script
 and use the <a href="processfile.html"><b>OpenJsCad parser</b></a>. For more information see the
-<a href="index.html">OpenJsCad documentation</a>. 
+<a href="index.html">OpenJsCad documentation</a>.
 <br><br> 
 <textarea id="code">
 
