--- a/processfile.html
+++ b/processfile.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
 <html><head>
-  <script src="../src/three.min.js"></script>
-  <script src="../src/csg.js"></script>
-  <script src="../src/openjscad.js"></script>
-  <script src="../src/trackballcontrols.js"></script>
-  <script src="../src/threecsg.js"></script>
+  <script src="src/three.min.js"></script>
+  <script src="src/csg.js"></script>
+  <script src="src/openjscad.js"></script>
+  <script src="src/trackballcontrols.js"></script>
+  <script src="src/threecsg.js"></script>
 
 <style>
 
@@ -38,7 +38,7 @@ h1 {
 a { color: inherit; }
 </style>
 
-<link rel="stylesheet" href="css/openjscad.css" type="text/css">
+<link rel="stylesheet" href="openjscad.css" type="text/css">
 
 <script>
 
